# CursoHaskell

./: README.md  cursoHaskell.code-workspace
Aula1/listas/: listas.cabal
Aula1/listas/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: listas-0.1.0.0
Aula1/listas/src/: Main.hs
Aula1/primeiroProjeto/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: primeiroProjeto-0.1.0.0
Aula1/primeiroProjeto/src/: Main.hs
Aula2/listComprehension/al2/: README.md  al2.cabal
Aula2/listComprehension/al2/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: al2-0.1.0.0
Aula2/listComprehension/al2/src/: Main.hs
Aula2/listComprehension/meuLength/: README.md  meuLength.cabal
Aula2/listComprehension/meuLength/src/: Main.hs
Aula2/mapfoldfilter/: README.md  mapfoldfilter.cabal
Aula2/mapfoldfilter/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: mapfoldfilter-0.1.0.0
Aula2/mapfoldfilter/src/: Main.hs
Aula2/patternmatching/: README.md  patternmatching.cabal
Aula2/patternmatching/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: patternmatching-0.1.0.0
Aula2/patternmatching/src/: Main.hs
Aula2/recursao/: README.md  recursao.cabal
Aula2/recursao/src/: Main.hs
Aula2/tiposnovos/: README.md  tiposnovos.cabal
Aula2/tiposnovos/src/: Main.hs
Aula3/: Aula3.cabal
Aula3/.stack-work/install/x86_64-linux/lts-12.11/8.4.3/doc/Aula3-0.1.0.0/: LICENSE
Aula3/src/: Main.hs
