name:                Aula3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AnBarbosaBr/Aula3#readme
license:             BSD3
license-file:        LICENSE
author:              Andre
maintainer:          an.barbosa@outlook.com.br
copyright:           Apenas para uso pessoal
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Aula3
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
